fix button color on ios

--- a/src/components/ImageGallery/AnimationBtn/AnimationBtn.module.css
+++ b/src/components/ImageGallery/AnimationBtn/AnimationBtn.module.css
@@ -12,6 +12,7 @@
     cursor: pointer;
 
     background-color: var(--primary-button);
+    color: black;
 }
 
 .container:hover {
